--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,7 @@
                 <a class="nav-item nav-link" th:href="@{/register}">Registracija</a>
             </div>
             <div sec:authorize="isAuthenticated()" class="navbar-nav ml-auto">
+                <a class="nav-item nav-link" th:href="@{/user_managament}">Upravljanje korisnicima</a>
                 <a class="nav-item nav-link" th:href="@{/profil}">Profil</a>
                 <a class="nav-item nav-link" th:href="@{/books}">Knjige</a>
                 <a class="nav-item nav-link" th:href="@{/authors}">Autori</a>
@@ -265,8 +266,8 @@
                                     <h4 th:text="${book.title}"></h4>
                                     <div class="d-flex justify-content-between align-items-center">
                                             <div class="btn-group">
-                                                <a th:href="@{/updateBook/{id}(id=${book.id})}" class="btn btn-sm btn-info">Edit</a>
-                                                <a th:href="@{/deleteBook/{id}(id=${book.id})}" class="btn btn-sm btn-danger">Delete</a>
+                                                <a th:href="@{/updateBook/{id}(id=${book.id})}" class="btn btn-sm btn-info">Uredite</a>
+                                                <a th:href="@{/deleteBook/{id}(id=${book.id})}" class="btn btn-sm btn-danger">Izbrišite</a>
                                             </div>
                                             <small class="text-muted">9 mins</small>
                                     </div>
