--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -40,34 +40,34 @@
                 <!-- Success message -->
                 <div th:if="${param.success}">
                     <div class="alert alert-success">
-                        Registration successfull!
+                        Registracija uspješna!
                     </div>
                 </div>
                 
-                <h1> Register </h1>
+                <h1> Registrirajte se  </h1>
                 <hr>
-                <h2>Enter your info</h2>
+                <h2>Unesite svoje informacije</h2>
                 <!-- Register Form -->
                 <form action="#" th:action="@{/register}" th:object="${user}" method="POST">
                     <div class="form-group">
                         <input type="text" th:field="*{firstName}" 
-                        required-autofocus="required" placeholder="First name" class="form-control">
+                        required-autofocus="required" placeholder="Ime" class="form-control">
                     </div>
                     <div class="form-group">
                         <input type="text" th:field="*{lastName}" 
-                        required-autofocus="required" placeholder="Last name" class="form-control">
+                        required-autofocus="required" placeholder="Prezime" class="form-control">
                     </div>
                     <div class="form-group">
                         <input type="text" th:field="*{email}" 
-                        required-autofocus="required" placeholder="Email" class="form-control">
+                        required-autofocus="required" placeholder="E-mail" class="form-control">
                     </div>
                     <div class="form-group">
                         <input type="password" th:field="*{password}" 
-                        required-autofocus="required" placeholder="Password" class="form-control">    
+                        required-autofocus="required" placeholder="Lozinka" class="form-control">
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="form-control btn btn-info col-2">Register</button>
-                        <span>Already registered? <a th:href="@{/login}">Login here.</a></span>    
+                        <button type="submit" class="form-control btn btn-info col-2">Registrirajte se</button>
+                        <span>Već imate profil? <a th:href="@{/login}">Prijavite se ovdje.</a></span>
                     </div>
 
                 </form>
