--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -22,13 +22,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <form class="form-inline my-2 my-md-0">
-            <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+            <input class="form-control" type="text" placeholder="Pretraga" aria-label="Search">
         </form>
         <div sec:authorize="isAnonymous()" class="navbar-nav ml-auto">
             <a class="nav-item nav-link" th:href="@{/login}">Prijava</a>
             <a class="nav-item nav-link" th:href="@{/register}">Registracija</a>
         </div>
         <div sec:authorize="isAuthenticated()" class="navbar-nav ml-auto">
+            <a class="nav-item nav-link" th:href="@{/user_managament}">Upravljanje korisnicima</a>
+            <a class="nav-item nav-link" th:href="@{/profil}">Profil</a>
             <a class="nav-item nav-link" th:href="@{/books}">Knjige</a>
             <a class="nav-item nav-link" th:href="@{/authors}">Autori</a>
             <a class="nav-item nav-link" th:href="@{/publishers}">Izdavači</a>
@@ -43,20 +45,20 @@
     <div class="row">
         <div class="col-md-12">
 
-            <h1>Book list</h1>
-            <a th:href="@{/newBook}" class="btn btn-primary btn-sm mb-3">Add new book</a>
+            <h1>Popis knjiga</h1>
+            <a th:href="@{/newBook}" class="btn btn-primary btn-sm mb-3">Dodaj novu knjigu</a>
             <table border="1" class="table table-striped table-responsive-md">
                 <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Cover image</th>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>First publish date</th>
-                    <th>Author</th>
-                    <th>Publisher</th>
-                    <th>Category</th>
-                    <th>Actions</th>
+                    <th>Slika</th>
+                    <th>Naslov</th>
+                    <th>Opis</th>
+                    <th>Datum prvog objavljivanja</th>
+                    <th>Autor</th>
+                    <th>Izdavač</th>
+                    <th>Kategorija</th>
+                    <th>Akcije</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -70,8 +72,8 @@
                     <td th:text="${book.publisherName}"></td>
                     <td th:text="${book.categoryName}"></td>
                     <td>
-                        <a th:href="@{/updateBook/{id}(id=${book.id})}" class="btn btn-info">Update</a>
-                        <a th:href="@{/deleteBook/{id}(id=${book.id})}" class="btn btn-danger">Delete</a>
+                        <a th:href="@{/updateBook/{id}(id=${book.id})}" class="btn btn-info">Ažuriraj</a>
+                        <a th:href="@{/deleteBook/{id}(id=${book.id})}" class="btn btn-danger">Izbriši</a>
                     </td>
                 </tr>
                 </tbody>
