--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -22,13 +22,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <form class="form-inline my-2 my-md-0">
-                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                <input class="form-control" type="text" placeholder="Pretraga" aria-label="Search">
             </form>
             <div sec:authorize="isAnonymous()" class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" th:href="@{/login}">Prijava</a>
                 <a class="nav-item nav-link" th:href="@{/register}">Registracija</a>
             </div>
             <div sec:authorize="isAuthenticated()" class="navbar-nav ml-auto">
+                <a class="nav-item nav-link" th:href="@{/user_managament}">Upravljanje korisnicima</a>
                 <a class="nav-item nav-link" th:href="@{/profil}">Profil</a>
                 <a class="nav-item nav-link" th:href="@{/books}">Knjige</a>
                 <a class="nav-item nav-link" th:href="@{/authors}">Autori</a>
@@ -40,7 +41,81 @@
     </nav>
 </header>
 
+<div class="container light-style flex-grow-1 container-p-y">
 
+    <h4 class="font-weight-bold py-3 mb-4">
+        Postavke profila
+    </h4>
+    <form action="#" th:action="@{/updateUser}" method="POST" enctype="multipart/form-data">
+    <div class="card overflow-hidden">
+        <div class="row no-gutters row-bordered row-border-light">
+            <div class="col-md-3 pt-0">
+                <div class="list-group list-group-flush account-settings-links">
+                    <a class="list-group-item list-group-item-action active" data-toggle="list" href="#account-general">Općenito</a>
+                    <a class="list-group-item list-group-item-action" data-toggle="list" href="#account-change-password">Promjeni lozinku</a>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="tab-content">
+                    <div class="tab-pane fade active show" id="account-general">
+                        <div class="card-body media align-items-center">
+                            <img th:src="'/uploads/images/'+${user.avatar}" alt="Slika profila" style="height: 300px; width: 300px" class="d-block ui-w-80">
+                            <div class="media-body ml-4">
+                                <label class="btn btn-outline-primary">
+                                    Postavi novu sliku
+                                    <input type="file" class="account-settings-fileinput">
+                                </label> &nbsp;
+                            </div>
+                        </div>
+                        <hr class="border-light m-0">
+
+                        <div class="card-body">
+                            <div class="form-group">
+                                <label class="form-label">Ime</label>
+                                <input type="text" class="form-control mb-1" th:field="*{user.firstName}" th:value="${user.firstName}">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label">Prezime</label>
+                                <input type="text" class="form-control" th:field="*{user.lastName}" th:value="${user.lastName}">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label">E-mail</label>
+                                <input type="text" class="form-control mb-1" th:field="*{user.email}" th:value="${user.email}">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="tab-pane fade" id="account-change-password">
+                        <div class="card-body pb-2">
+
+                            <div class="form-group">
+                                <label class="form-label">Trenutna lozinka</label>
+                                <input type="password" class="form-control">
+                            </div>
+
+                            <div class="form-group">
+                                <label class="form-label">Nova lozinka</label>
+                                <input type="password" class="form-control">
+                            </div>
+
+                            <div class="form-group">
+                                <label class="form-label">Potvrdi novu lozinku</label>
+                                <input type="password" class="form-control">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="text-right mt-3">
+        <button type="submit" class="btn btn-primary">Spremi promjene</button>&nbsp;
+    </div>
+    </form>
+
+</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
