--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -259,9 +259,9 @@
                     <h1 class="text-center">Knjige</h1>
 
                     <div class="row py-4">
-                        <div class="col-md-3" style="max-width: fit-content;" th:each="book: ${books}">
+                        <div class="col-md-3" style="max-width: 100%;" th:each="book: ${books}">
                             <div class="card mb-4 shadow-sm">
-                                <a th:href="@{/books/{id}(id=${book.id})}"><img th:src="@{'/uploads/images/'+${book.coverImage}}" alt="Cover image..." style="width:100%; height: 300px;"></a>
+                                <a th:href="@{/books/{id}(id=${book.id})}"><img th:src="@{'/uploads/images/'+${book.coverImage}}" alt="Cover image..." style="height: 70%; width: 100%;"></a>
                                 <div class="card-body">
                                     <h4 th:text="${book.title}"></h4>
                                     <div class="d-flex justify-content-between align-items-center">
