--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -46,7 +46,8 @@
     <h4 class="font-weight-bold py-3 mb-4">
         Postavke profila
     </h4>
-    <form action="#" th:action="@{/updateUser}" method="POST" enctype="multipart/form-data">
+    <form action="#" th:action="@{/updateUser}" th:object="${user}" method="POST" enctype="multipart/form-data">
+        <input type="hidden" th:field="*{id}">
     <div class="card overflow-hidden">
         <div class="row no-gutters row-bordered row-border-light">
             <div class="col-md-3 pt-0">
@@ -63,7 +64,8 @@
                             <div class="media-body ml-4">
                                 <label class="btn btn-outline-primary">
                                     Postavi novu sliku
-                                    <input type="file" class="account-settings-fileinput">
+                                    <input type="file" accept="image/png, image/jpeg, image/jpg" id="avatarImg" name="avatarImg" placeholder="Select cover image" class="account-settings-fileinput">
+
                                 </label> &nbsp;
                             </div>
                         </div>
@@ -72,15 +74,15 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label class="form-label">Ime</label>
-                                <input type="text" class="form-control mb-1" th:field="*{user.firstName}" th:value="${user.firstName}">
+                                <input type="text" class="form-control mb-1" th:field="*{firstName}" th:value="${user.firstName}">
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Prezime</label>
-                                <input type="text" class="form-control" th:field="*{user.lastName}" th:value="${user.lastName}">
+                                <input type="text" class="form-control" th:field="*{lastName}" th:value="${user.lastName}">
                             </div>
                             <div class="form-group">
                                 <label class="form-label">E-mail</label>
-                                <input type="text" class="form-control mb-1" th:field="*{user.email}" th:value="${user.email}">
+                                <input type="text" class="form-control mb-1" th:field="*{email}" th:value="${user.email}">
                             </div>
                         </div>
 
@@ -89,18 +91,13 @@
                         <div class="card-body pb-2">
 
                             <div class="form-group">
-                                <label class="form-label">Trenutna lozinka</label>
-                                <input type="password" class="form-control">
-                            </div>
-
-                            <div class="form-group">
                                 <label class="form-label">Nova lozinka</label>
-                                <input type="password" class="form-control">
+                                <input type="password" id="newPassword" name="newPassword" class="form-control">
                             </div>
 
                             <div class="form-group">
                                 <label class="form-label">Potvrdi novu lozinku</label>
-                                <input type="password" class="form-control">
+                                <input type="password" id="confirmPassword" name="confirmPassword" class="form-control">
                             </div>
 
                         </div>
