--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -29,7 +29,7 @@
                 <a class="nav-item nav-link" th:href="@{/register}">Registracija</a>
             </div>
             <div sec:authorize="isAuthenticated()" class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" th:href="@{/user_managament}">Upravljanje korisnicima</a>
+                <a class="nav-item nav-link" sec:authorize="hasAuthority('ROLE_ADMIN')" th:href="@{/user_managament}">Upravljanje korisnicima</a>
                 <a class="nav-item nav-link" th:href="@{/profil}">Profil</a>
                 <a class="nav-item nav-link" th:href="@{/books}">Knjige</a>
                 <a class="nav-item nav-link" th:href="@{/authors}">Autori</a>
